Bug Fixes, Report Bindings, Footer modal done

--- a/src/App.css
+++ b/src/App.css
@@ -17,9 +17,9 @@
     user-select: none;
 }
 
-.html-content p {
+/* .html-content p {
     margin: 10px 0 !important;
-}
+} */
 
 .html-content td {
     min-width: 240px;
