--- a/src/App.css
+++ b/src/App.css
@@ -73,3 +73,59 @@
         min-width: 50%;
     }
 }
+
+/* Button Animation Start */
+.codepen-button {
+    display: block;
+    cursor: pointer;
+    color: white;
+    /* margin: 0 auto; */
+    position: relative;
+    text-decoration: none;
+    font-weight: 600;
+    border-radius: 6px;
+    overflow: hidden;
+    padding: 3px;
+    isolation: isolate;
+  }
+  
+  .codepen-button::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 400%;
+    height: 100%;
+    background: linear-gradient(115deg,#4fcf70,#fad648,#a767e5,#12bcfe,#44ce7b);
+    background-size: 25% 100%;
+    animation: hover-animate 1s linear infinite;
+    /* animation-play-state: paused; */
+    translate: -5% 0%;
+    transition: translate 0.25s ease-out;
+  }
+  
+  .codepen-button:hover::before {
+    animation-play-state: running;
+    transition-duration: 0.75s;
+    translate: 0% 0%;
+  }
+  
+  @keyframes hover-animate {
+      to {
+      transform: translateX(-25%);
+    }
+  }
+  
+  .codepen-button span {
+    position: relative;
+    display: block;
+    background: #6366F1;
+    /* padding: 0.5rem 1.5rem; */
+    /* font-size: 1.1rem; */
+    border-radius: 3px;
+    height: 100%;
+}
+.codepen-button span:hover {
+    background: #4F46E5;
+}
+/* Button Animation End */
